{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 21,
  "lineage": "1773c403-9b1b-9b3d-5f05-9353837f54b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04a34dc671e01eb27",
            "owner_id": "356349009769",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-05fded670ded0c2e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06ee9f53158792171",
            "owner_id": "356349009769",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a34dc671e01eb27",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-05fded670ded0c2e3"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2c699183f98072e",
            "route_table_id": "rtb-06ee9f53158792171",
            "subnet_id": "subnet-097170f6e8fd43524"
          },
          "dependencies": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356349009769:security-group/sg-007ba2b1b4e3bc0d7",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007ba2b1b4e3bc0d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "356349009769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-05fded670ded0c2e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356349009769:subnet/subnet-097170f6e8fd43524",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-097170f6e8fd43524",
            "map_public_ip_on_launch": true,
            "owner_id": "356349009769",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-05fded670ded0c2e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356349009769:subnet/subnet-0bcbda0cc0d91a2df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0bcbda0cc0d91a2df",
            "map_public_ip_on_launch": true,
            "owner_id": "356349009769",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-05fded670ded0c2e3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:356349009769:vpc/vpc-05fded670ded0c2e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-087c56a3a1210bbd1",
            "default_route_table_id": "rtb-03d425c2101490d94",
            "default_security_group_id": "sg-0743998f693589127",
            "dhcp_options_id": "dopt-f23cbc88",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05fded670ded0c2e3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d425c2101490d94",
            "owner_id": "356349009769",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}